--- a/PentoSource/app/src/main/res/layout/activity_chat.xml
+++ b/PentoSource/app/src/main/res/layout/activity_chat.xml
@@ -20,7 +20,9 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_chat" />
+    <include
+        android:id="@+id/include"
+        layout="@layout/content_chat" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
