--- a/PentoSource/app/src/main/res/layout/activity_chat.xml
+++ b/PentoSource/app/src/main/res/layout/activity_chat.xml
@@ -1,45 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChatActivity">
+    android:background="@drawable/bg_gradient"
+    tools:context="com.example.pento.ui.chat.ChatActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/conversation"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/userInput"
+        android:textSize="16sp" />
+
+    <EditText
+        android:id="@+id/userInput"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <include
-        android:id="@+id/include"
-        layout="@layout/content_chat" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
-
-    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        android:layout_alignParentBottom="true"
+        android:layout_margin="8dp"
+        android:background="@drawable/bg_edit_text"
+        android:hint="Ask Christopher"
+        android:inputType="text"
+        android:textColor="#fff"
+        android:padding="12dp"
+        android:imeActionId="4"
+        android:imeOptions="actionSend"
+        android:textColorHint="#fff"
+        android:textSize="20sp"/>
+</RelativeLayout>
