Final login backend changes

--- a/PentoSource/app/src/main/res/layout/activity_chat.xml
+++ b/PentoSource/app/src/main/res/layout/activity_chat.xml
@@ -22,7 +22,7 @@
         android:layout_alignParentBottom="true"
         android:layout_margin="8dp"
         android:background="@drawable/bg_edit_text"
-        android:hint="Ask Christopher"
+        android:hint=""
         android:inputType="text"
         android:textColor="#fff"
         android:padding="12dp"
