--- a/PentoSource/app/src/main/res/layout/activity_chat.xml
+++ b/PentoSource/app/src/main/res/layout/activity_chat.xml
@@ -15,16 +15,18 @@
         android:orientation="horizontal">
 
         <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/chat_back"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:id="@+id/chat_back"
-            android:background="@drawable/back_button"></androidx.appcompat.widget.AppCompatImageButton>
+            android:background="@drawable/back_button"
+            android:onClick="onClickSwitchIntent"></androidx.appcompat.widget.AppCompatImageButton>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@android:color/white"
             android:text="Cabbage Patch Cats"
+            android:id="@+id/GroupName"
             android:layout_toRightOf="@id/chat_back"
             android:textSize="30dp"
             android:textColor="#000"></androidx.appcompat.widget.AppCompatTextView>
