--- a/PentoSource/app/src/main/res/layout/profile.xml
+++ b/PentoSource/app/src/main/res/layout/profile.xml
@@ -8,95 +8,32 @@
     android:fillViewport="true"
     android:background="@drawable/profile_bg">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/your_groups"
+        android:layout_width="316dp"
+        android:layout_height="144dp"
+        android:background="#FFF"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.421"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
     <TextView
         android:id="@+id/profile_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="28dp"
         android:text="Areeb Yaqub"
         android:textColor="@android:color/white"
         android:textSize="12pt"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.519"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/bio"
-        android:layout_width="392dp"
-        android:layout_height="162dp"
-        android:text="My name is Areeb Yaqub and I like Cabbage Patch cats and anime. My favorite anime is Cory in the House because the animation is so realistic."
-        android:textColor="@android:color/white"
-        android:textSize="12pt"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/group2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:onClick="onClickSwitchIntent"
-        android:text="Enter Group 2"
-        app:layout_constraintBottom_toTopOf="@+id/group3"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/group3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:onClick="onClickSwitchIntent"
-        android:text="Enter Group 3"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/group1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:onClick="onClickSwitchIntent"
-        android:text="Enter Group 1"
-        app:layout_constraintBottom_toTopOf="@+id/group2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bio"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <TextView
-        android:id="@+id/group2_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginBottom="12dp"
-        android:text="Regular Cats"
-        android:textColor="@android:color/white"
-        android:textSize="12pt"
-        app:layout_constraintBottom_toTopOf="@+id/group3_text"
-        app:layout_constraintStart_toEndOf="@+id/group2" />
-
-
-    <TextView
-        android:id="@+id/group3_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
-        android:text="Regular Cabbages"
-        android:textColor="@android:color/white"
-        android:textSize="12pt"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/group3" />
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/profile_back"
@@ -116,81 +53,52 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/edit"></androidx.appcompat.widget.AppCompatImageButton>
 
-    <TextView
-        android:id="@+id/group1_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginBottom="12dp"
-        android:text="Cabbage Patch Cats"
-        android:textColor="@android:color/white"
-        android:textSize="12pt"
-        app:layout_constraintBottom_toTopOf="@+id/group2_text"
-        app:layout_constraintStart_toEndOf="@+id/group1"
-        app:layout_constraintTop_toBottomOf="@+id/bio"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="156dp"
-        android:layout_height="61dp"
-        android:text="Profile"
-        android:textColor="@android:color/white"
-        android:textSize="12pt"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.348"
-        app:layout_constraintStart_toEndOf="@+id/profile_back"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="132dp"
-        android:layout_height="0dp"
-        android:text="Your Groups"
-        android:textColor="@android:color/white"
-        android:textSize="10pt"
-        app:layout_constraintBottom_toTopOf="@+id/group1"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="135dp"
         android:layout_height="136dp"
+        android:layout_marginTop="60dp"
         android:src="@drawable/cmcircle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.557"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/searchbar"
+        android:layout_width="358dp"
+        android:layout_height="55dp"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="8dp"
+        android:layout_marginBottom="60dp"
+        android:background="@drawable/bg_edit_text"
+        android:imeActionId="4"
+        android:imeOptions="actionSend"
+        android:inputType="text"
+        android:padding="12dp"
+        android:text="Search Groups"
+        android:textColor="#fff"
+        android:textColorHint="#fff"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/groups"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.301"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/your_groups" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/groups"
+        android:layout_width="303dp"
+        android:layout_height="125dp"
+        android:layout_marginBottom="152dp"
+        android:background="#FFF"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.188" />
+        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/group_search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="onClickSwitchIntent"
-        app:layout_constraintBottom_toTopOf="@+id/textView7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8"
-        app:layout_constraintVertical_bias="0.481"
-        app:srcCompat="@drawable/searchbar"></androidx.appcompat.widget.AppCompatImageButton>
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Connections"
-        android:textColor="@android:color/white"
-        android:textSize="12pt"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bio"
-        app:layout_constraintVertical_bias="0.116" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
